workspace = { members = ["service"] }

[package]
name = "osrs-pathfinder-tile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
zip = "0.6.6"
byteorder = "1.5.0"
array-init = "2.1.0"
derive-new = "0.6.0"
